--- a/bower.json
+++ b/bower.json
@@ -23,11 +23,15 @@
     "test/"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.3.0",
+    "polymer": "Polymer/polymer#^2.0.0-rc.3",
     "Idle.js": "shawnmclean/Idle.js#f46e86f"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "web-component-tester": "^4.2.1"
+    "web-component-tester": "*"
+  },
+  "resolutions": {
+    "webcomponentsjs": "^v1.0.0-rc.5",
+    "polymer": "^2.0.0-rc.3"
   }
 }
