--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,5 @@
 {
   "name": "f-idlejs",
-  "version": "0.1.3",
   "authors": [
     "Martynas <martynas@firmfirm.co>"
   ],
@@ -23,15 +22,12 @@
     "test/"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0-rc.3",
+    "polymer": "Polymer/polymer#~2.0.0",
     "Idle.js": "shawnmclean/Idle.js#f46e86f"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "web-component-tester": "*"
-  },
-  "resolutions": {
-    "webcomponentsjs": "^v1.0.0-rc.5",
-    "polymer": "^2.0.0-rc.3"
+    "iron-component-page": "PolymerElements/iron-component-page#~2.0.0",
+    "web-component-tester": "~6.0.0",
+    "webcomponentsjs": "~1.0.0"
   }
 }
